plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'ro.uvt.pokedex'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-flyway'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
    implementation 'org.json:json:20240303'
    // SLF4J and Logback for logging
    implementation 'org.mvel:mvel2:2.5.2.Final'
    implementation 'org.slf4j:slf4j-api'
    implementation 'ch.qos.logback:logback-classic'
    implementation 'org.jsoup:jsoup:1.17.2'
    implementation 'org.apache.poi:poi:5.3.0'
    implementation 'org.apache.poi:poi-ooxml:5.3.0'
    implementation 'com.opencsv:opencsv:5.9'
    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-data-mongodb-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:junit-jupiter:1.19.7'
    testImplementation 'org.testcontainers:mongodb:1.19.7'
    testImplementation 'org.testcontainers:postgresql:1.19.7'
    runtimeOnly 'org.postgresql:postgresql'
}

tasks.named('test') {
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(25)
    }
    systemProperty 'spring.task.scheduling.enabled', 'false'
    systemProperty 'core.scopus.scheduler.enabled', 'false'
    systemProperty 'management.health.scopusPython.enabled', 'false'
    useJUnitPlatform()
}

tasks.named('bootRun') {
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.register('verifyFrontendAssets', Exec) {
    commandLine 'sh', '-lc', 'npm run verify-assets'
}

tasks.register('verifyTemplateAssets', Exec) {
    commandLine 'sh', '-lc', 'npm run verify-template-assets'
}

tasks.register('verifyDuplicationGuardrails', Exec) {
    commandLine 'sh', '-lc', 'npm run verify-duplication-guardrails'
}

tasks.register('verifyDatatablesOptin', Exec) {
    commandLine 'sh', '-lc', 'npm run verify-datatables-optin'
}

tasks.named('check') {
    dependsOn tasks.named('verifyFrontendAssets')
    dependsOn tasks.named('verifyTemplateAssets')
    dependsOn tasks.named('verifyDuplicationGuardrails')
    dependsOn tasks.named('verifyDatatablesOptin')
}

tasks.register('testH226DualReadGate', Test) {
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(25)
    }
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform()
    systemProperty 'spring.task.scheduling.enabled', 'false'
    systemProperty 'core.scopus.scheduler.enabled', 'false'
    systemProperty 'management.health.scopusPython.enabled', 'false'
    filter {
        includeTestsMatching '*DualReadGate*'
    }
}

tasks.register('testH2210Baseline', Test) {
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(25)
    }
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform()
    systemProperty 'spring.task.scheduling.enabled', 'false'
    systemProperty 'core.scopus.scheduler.enabled', 'false'
    systemProperty 'management.health.scopusPython.enabled', 'false'
    filter {
        includeTestsMatching '*JdbcDualReadGateServiceTest'
        includeTestsMatching '*ReportingReadStoreRoutingTest'
        includeTestsMatching '*ScholardexCutoverGuardrailTest'
        includeTestsMatching '*DefaultH22OperationalStatusServiceTest'
        includeTestsMatching '*AdminInitializationControllerContractTest'
        includeTestsMatching '*AdminInitializationSecurityContractTest'
    }
}
